# terminal-play

./: .gitignore  Cargo.toml  README.md
src/: about.rs  app.rs  command_line.rs  crossterm.rs  decoder.rs  log.rs  main.rs  play.rs  set_ctrlc.rs  ui.rs
src/common/: about.rs  logger.rs  mod.rs
src/playback/: decoder.rs  mod.rs  play.rs
