[package]
name = "terminal-play"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
chrono = "0.4.23"
rodio = "0.16.0"
ctrlc = "3.2.5"
log = "0.4.17"