[package]
name = "terminal-play"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
log = { version = "0.4.20", features = ["std"] }
chrono = "0.4.31"
rodio = "0.17.1"
ctrlc = "3.4.1"
shlex = "1.3.0"
